testsuite/tests/properties/invalid_rebindings/new_env/test.lkt
from common import FooNode

class Example: FooNode {
    fun p(): Int = null[FooNode].new_env
}
